Trying to fix layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -69,7 +69,7 @@
 .img-preview:hover {
     /* Blurs the image and adds grayscale */
     transition: grayscale 1s, blur 100ms;
-    filter: blur(1px) grayscale(65%) drop-shadow(0.25em 0.4em 0.75em #3d3d3d);;
+    filter: blur(1px) grayscale(65%) drop-shadow(0.25em 0.4em 0.75em #3d3d3d);
 }   
 
 .img-txt {
@@ -82,11 +82,12 @@
     pointer-events: none;
     text-align: center;
     top: -50%;
-    user-select:none;
-    overflow:hidden;
-  }
+    user-select: none;
+    overflow: hidden;
+    display: none;
+}
 
-  .landscape {
+.landscape {
     user-select: none;
     /* There's nothing here, for now . . . 
     WTR FSR1
@@ -96,12 +97,13 @@
 
       */
       
-  }
+}
 
 .section {
     display: block;
 }
 
 .img-piece {
-    width: 100%;
+    width: 50px;
+    height: 50px;
 }
